--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-slate
 title: Koushik Aravalli's scribble
 description: This is a blog site
+
+permalink: /blog/:year/:month/:day/:title
