remove jpgs from local folder, add footer to pist

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ title: Koushik Aravalli's scribble
 description: This is Koushik's scribble
 
 permalink: /blog/:year/:month/:day/:title
+
+twitter_username: koushikaravalli
+github_username:  koushik-aravalli
