--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/koushik-aravalli/koushik-aravalli.github.io/issues"
   },
   "dependencies": {
+    "clean": "^4.0.2",
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-dark-mode": "^1.1.2",
